Simplified the structure and added documentation and /jkstatus

--- a/httpd-modjk/Dockerfile
+++ b/httpd-modjk/Dockerfile
@@ -9,5 +9,6 @@ RUN tar -zxf tomcat-connectors-1.2.42-src.tar.gz
 RUN cd tomcat-connectors-1.2.42-src/native && ./configure  --with-apxs=/usr/local/apache2/bin/apxs && make
 RUN mkdir /build_modjk
 
-COPY ./my-httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY ./workers.properties /usr/local/apache2/conf/workers.properties
+COPY mod_jk.conf /usr/local/apache2/conf/extra/mod_jk.conf
+RUN echo 'Include conf/extra/mod_jk.conf' >> /usr/local/apache2/conf/httpd.conf
