--- a/httpd-modjk/workers.properties
+++ b/httpd-modjk/workers.properties
@@ -1,5 +1,7 @@
-worker.list=jboss1
+worker.list=jkstatus,worker1
 
-worker.jboss1.type=ajp13
-worker.jboss1.host=172.17.0.1
-worker.jboss1.port=8009
+worker.worker1.type=ajp13
+worker.worker1.host=172.17.0.1
+worker.worker1.port=8009
+
+worker.jkstatus.type=status
