--- a/jboss-fuse-eap/Dockerfile
+++ b/jboss-fuse-eap/Dockerfile
@@ -17,6 +17,7 @@ RUN unzip /tmp/distribution/jboss-eap-6.4.0.zip -d /home/jboss
 RUN $JBOSS_HOME/bin/add-user.sh admin jboss#1! --silent
 
 RUN echo "JAVA_OPTS=\"\$JAVA_OPTS -Djboss.bind.address=0.0.0.0 -Djboss.bind.address.management=0.0.0.0\"" >> $JBOSS_HOME/bin/standalone.conf
+RUN echo "JAVA_OPTS=\"\$JAVA_OPTS -Dactivemq.addr=\$ACTIVEMQ_PORT_61616_TCP_ADDR -Dactivemq.port=\$ACTIVEMQ_PORT_61616_TCP_PORT\"" >> $JBOSS_HOME/bin/standalone.conf
 
 RUN java -jar /tmp/distribution/fuse-eap-installer-6.3.0.redhat-187.jar $JBOSS_HOME
 
@@ -27,6 +28,8 @@ EXPOSE 8080 9990 9999
 ENTRYPOINT $JBOSS_HOME/bin/standalone.sh -c standalone-full.xml
 
 USER jboss
+
+VOLUME /home/jboss/jboss-eap-6.4/standalone/deployments
 
 CMD /bin/bash
 
