Updated Docker image name Updated to Karaf 6.3.0 262-10 Added new env variable: NEXUS_URL that can be added to repositories

--- a/jboss-fuse/image/Dockerfile
+++ b/jboss-fuse/image/Dockerfile
@@ -1,6 +1,6 @@
 FROM jboss/base-jdk:8
 
-MAINTAINER Raphael Parree <rparree@edc4it.com>
+MAINTAINER Sarel Janse van Rensburg <monstersarel@gmail.com>
 
 # If the container is launched with re-mapped ports, these ENV vars should
 # be set to the remapped values.
@@ -14,24 +14,25 @@ ENV FUSE_PUBLIC_AMQP_SSL_PORT 5671
 ENV FUSE_PUBLIC_STOMP_SSL_PORT 61614
 
 # Set the FUSE_VERSION env variable
-ENV FUSE_VERSION 6.3.0.redhat-077
+ENV FUSE_VERSION 6.3.0.redhat-262-10
 
 # install
-ENV FUSE_DISTRO_URL=https://repository.jboss.org/nexus/content/groups/ea/org/jboss/fuse/jboss-fuse-full/${FUSE_VERSION}/jboss-fuse-full-${FUSE_VERSION}.zip
-RUN curl -O ${FUSE_DISTRO_URL}
+#ENV FUSE_DISTRO_URL=https://repository.jboss.org/nexus/content/groups/ea/org/jboss/fuse/jboss-fuse-karaf/${FUSE_VERSION}/jboss-fuse-karaf-${FUSE_VERSION}.zip
+#RUN curl -O ${FUSE_DISTRO_URL}
+
+# Copy a local version of fuse 
+COPY jboss-fuse-karaf-${FUSE_VERSION}.zip /opt/jboss/jboss-fuse-karaf-${FUSE_VERSION}.zip
 
 # Install fuse in the image.
 COPY install.sh /opt/jboss/install.sh
-
-#COPY jboss-fuse-full-6.2.1.redhat-090.zip /opt/jboss/jboss-fuse-full-6.2.1.redhat-090.zip
 RUN /opt/jboss/install.sh
 
 EXPOSE 1099 2181 8101 8181 9300 9301 44444 61616 1883 5672 61613 61617 8883 5671 61614 18000-18005 19000-19005
 
 
-VOLUME /opt/jboss/jboss-fuse/bin
-VOLUME /opt/jboss/jboss-fuse/etc
-VOLUME /opt/jboss/jboss-fuse/kahadb
+#VOLUME /opt/jboss/jboss-fuse/bin
+#VOLUME /opt/jboss/jboss-fuse/etc
+#VOLUME /opt/jboss/jboss-fuse/kahadb
 VOLUME /opt/jboss/jboss-fuse/deploy
 
 
